# KuGmonkey

./: README.md
SGXDedup-1.0/: config.json  test.d
SGXDedup-1.0/Scripts/: environmentInstall.sh
SGXDedup-1.0/include/: dataSR.hpp  dataStructure.hpp  dedupCore.hpp  keyServer.hpp  sender.hpp
SGXDedup-1.0/key/sslKeys/: ca.crt  ca.key  ca.req  ca.srl  client.crt  client.key  client.req  server.crt  server.key  server.req
SGXDedup-1.0/src/: CMakeLists.txt
SGXDedup-1.0/src/client/: chunker.cpp  clientMain.cpp  fingerprinter.cpp  keyClient.cpp  sender.cpp
SGXDedup-1.0/src/enclave/include/: kmClient.hpp  km_enclave_u.h  powClient.hpp  powServer.hpp  pow_enclave_u.h
SGXDedup-1.0/src/enclave/km_enclave/: km_enclave.cpp  km_enclave.edl
SGXDedup-1.0/src/enclave/pow_enclave/: CMakeLists.txt  pow_enclave.cpp  pow_enclave.edl
SGXDedup-1.0/src/enclave/src/: kmClient.cpp  powClient.cpp  powServer.cpp
SGXDedup-1.0/src/keymanage/: keyServer.cpp
SGXDedup-1.0/src/server/: CMakeLists.txt  ServerMain.cpp  dataSR.cpp  dedupCore.cpp  keyServer.cpp
SGXDedup-1.0/src/util/: cryptoPrimitive.cpp
